update profile and change password routes
